k8s-yamls-master/k8s-yamls-master/live/lab/dxuim/ing.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: clusterinfo-http
  namespace: dxuim
spec:
  type: ClusterIP
  ports:
  - name: http-clusterinfo
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    module: clusterinfo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 # annotations:
 #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: clusterinfo
  namespace: dxuim
spec:
  ingressClassName: nginx
  rules:
  - host: calab-clusterinfo.medimpact.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clusterinfo-http
            port:
              number: 8080
#  tls:
#  - hosts:
#    - calab-clusterinfo.medimpact.com
